--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="styles.css">
-    <title>My Project</title>
+    <title>MExpanding Cards</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+        <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1636097350672-cebd866b4498?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80')"><h3>Active Card</h3></div>
+            <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1636097350786-f5c7b7c324ae?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80');"><h3>Photo 1</h3></div>
+            <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1636097350431-b17d8ed94ed0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80');"><h3>Photo 2</h3></div>
+            <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1636096728319-006aa000aea1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=880&q=80');"><h3>Photo 3</h3></div>
+            <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1636096728366-e143bc8ebbf9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=697&q=80');"><h3>Photo 4</h3></div>
+            <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1636097350830-cb08f3e16d6d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80');"><h3>Photo 5</h3></div>
+
+    </div>
 
 
 
